manifests/board-app/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-app-svc
  namespace: board-app-eks
spec:
  selector:
    app: board-app
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
